--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "logo192.png",
+      "src": "vínmoke1.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "292x292"
     }
   ],
   "start_url": ".",
